Implementada Caja Developer Bio

--- a/index.html
+++ b/index.html
@@ -14,25 +14,63 @@
 
 <body>
     <header>
-            <ul class="twitter" role="navigation">
-                    <li><i class="fa fa-home"></i>Home</li>
-                    <li><i class="fa fa-bell-o"></i>Notifications</li>
-                    <li><i class="fa fa-envelope-o"></i>Messages</li>
-                    <li class="twitter_bird"><i class="fa fa-twitter"></i></li>
-                    <li>
-                        <form>
-                            <input placeholder="search twitter" />
-                            <i class="fa fa-search"></i>
-                        </form>
-                    </li>
-                    <li>
-                        <img class="user" src="assets/img/user.png" alt="Claudina Cortez">
-                    </li>
-                    <li>
-                        <button>tweet</button>
-                    </li>
-                </ul>
+        <ul class="twitter">
+            <li>
+                <i class="fa fa-home"></i>Home</li>
+            <li>
+                <i class="fa fa-bell-o"></i>Notifications</li>
+            <li>
+                <i class="fa fa-envelope-o"></i>Messages</li>
+            <li class="twitter_bird">
+                <i class="fa fa-twitter"></i>
+            </li>
+            <li>
+                <form>
+                    <input placeholder="search twitter" />
+                    <i class="fa fa-search"></i>
+                </form>
+            </li>
+            <li>
+                <img class="user" src="assets/img/user.png" alt="Claudina Cortez">
+            </li>
+            <li>
+                <button>tweet</button>
+            </li>
+        </ul>
     </header>
+
+    <!-- Estructura de presentación del programador -->
+    <section class="developer">
+        <div>
+            <img src="assets/img/user.png">
+        </div>
+
+        <div class="datosCoders">
+            <p>Claudina Cortez R.</p>
+            <p>@claudinacr</p>
+        </div>
+
+        <div class="datos">
+            <li>
+                <a href="#">Tweets
+                    <br>
+                    <p>672</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">Siguiendo
+                    <br>
+                    <p>672</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">Seguidores
+                    <br>
+                    <p>672</p>
+                </a>
+            </li>
+        </div>
+    </section>
 
     <script src="assets/js/app.js"></script>
 </body>
